Fix banner spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   position: absolute;
   width: 850px;
   height: 680px;
-  margin-top: 200px;
+  margin-top: 250px;
   left: 50%;
   margin-left: -425px;
 }
